Letcencrupt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - doc.unusual.quest
    - com.unusual.quest
    secretName: app-tls
  rules:
  - host: doc.unusual.quest    
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuber-service-1
            port: 
              number: 80
  - host: com.unusual.quest
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuber-service-2
            port: 
              number: 80
